1주차 미션 UI 구현

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 03 14:32:00 KST 2024
-sdk.dir=C\:\\Users\\iksun\\AppData\\Local\\Android\\Sdk
+#Tue Sep 17 21:36:20 KST 2024
+sdk.dir=C\:\\Users\\LG Gram16\\AppData\\Local\\Android\\Sdk
